--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --dotenv .env.dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "drizzle-orm": "^0.44.7",
+    "jose": "^6.1.2",
     "nuxt": "^4.2.1",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.31.7",
+    "sass": "^1.94.2"
   }
 }
