--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "drizzle-orm": "^0.44.7",
     "jose": "^6.1.2",
+    "nanoid": "^5.1.6",
     "nuxt": "^4.2.1",
+    "pg": "^8.16.3",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "@types/pg": "^8.15.6",
     "drizzle-kit": "^0.31.7",
     "sass": "^1.94.2"
   }
