--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jose": "^6.1.2",
     "nanoid": "^5.1.6",
     "nuxt": "^4.2.1",
+    "p-queue": "^9.0.1",
     "pg": "^8.16.3",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
