--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "cron": "^4.3.5",
     "drizzle-orm": "^0.44.7",
     "jose": "^6.1.2",
     "nanoid": "^5.1.6",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/pg": "^8.15.6",
     "drizzle-kit": "^0.31.7",
-    "sass": "^1.94.2"
+    "sass": "^1.94.2",
+    "typescript": "^5.9.3"
   }
 }
