--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nuxt": "^4.2.1",
     "p-queue": "^9.0.1",
     "pg": "^8.16.3",
+    "redis": "^5.10.0",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
   },
