--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@ai-sdk/deepseek": "^1.0.31",
+    "ai": "^5.0.107",
     "cron": "^4.3.5",
     "drizzle-orm": "^0.44.7",
     "jose": "^6.1.2",
@@ -19,7 +21,8 @@
     "pg": "^8.16.3",
     "redis": "^5.10.0",
     "vue": "^3.5.25",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/pg": "^8.15.6",
