--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev --dotenv .env.dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "db-push:dev": "dotenv -e .env.dev -- drizzle-kit push --verbose --force"
   },
   "dependencies": {
     "@ai-sdk/deepseek": "^1.0.31",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/pg": "^8.15.6",
+    "dotenv-cli": "^11.0.0",
     "drizzle-kit": "^0.31.7",
     "sass": "^1.94.2",
     "typescript": "^5.9.3"
