refactor(task): 重构任务调度与AI分析模块
将新闻和股票关键词分析任务重构为基于事件驱动的任务调度系统
移除旧的AI日志表和相关代码，改用Redis存储AI调用日志
统一使用zhipuAI作为AI服务提供商，并优化任务队列管理

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "db-push:dev": "dotenv -e .env.dev -- drizzle-kit push --verbose --force"
+    "db-push:dev": "dotenv -e .env.dev -- drizzle-kit push --verbose"
   },
   "dependencies": {
     "@ai-sdk/deepseek": "^1.0.31",
