--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@ai-sdk/deepseek": "^1.0.31",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "ai": "^5.0.107",
     "cron": "^4.3.5",
     "drizzle-orm": "^0.44.7",
