fix: 调整定时任务时间，优化多阶段构建
修复.env.example文件中TAG默认值为"latest"
调整cron任务触发时间为每小时的第5分钟
优化migrate.Dockerfile使用多阶段构建
在任务队列中添加活跃任务日志输出

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,4 @@ AKTOOLS_URL="http://finai-aktools:8080"
 ZAI_API_KEY="<your-zai-api-key>"
 DOCKER_REGISTRY="<your-docker-registry>"
 NETWORK_NAME="<your-network-name>"
-TAG="<your-tag>"
+TAG="latest"
