feat(股票详情): 添加股票历史K线图功能
添加 lightweight-charts 依赖并实现股票历史K线图组件
新增股票历史数据爬取接口和前端展示
重构股票详情页面布局以容纳K线图组件

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cron": "^4.3.5",
     "drizzle-orm": "^0.44.7",
     "jose": "^6.1.2",
+    "lightweight-charts": "^5.1.0",
     "nanoid": "^5.1.6",
     "nuxt": "^4.2.1",
     "p-queue": "^9.0.1",
