feat: 优化任务队列间隔和错误处理
refactor: 重构PromiseTool的retry方法实现
refactor: 优化股票列表查询逻辑和排序规则

fix: 接口不再返回服务器错误消息
fix: 移除首页表格动画效果和冗余代码

chore: 为docker容器添加时区配置

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       net:
         aliases:
           - aktools
+    environment:
+      TZ: Asia/Shanghai
   postgres:
     <<: *bs
     image: postgres:18-alpine
@@ -27,6 +29,7 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql
     environment:
+      TZ: Asia/Shanghai
       POSTGRES_DB: finai
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     networks:
@@ -45,6 +48,8 @@ services:
       net:
         aliases:
           - redis
+    environment:
+      TZ: Asia/Shanghai
   migrate:
     <<: *bs
     image: ${DOCKER_REGISTRY}migrate:${TAG}
@@ -55,6 +60,7 @@ services:
     pull_policy: always
     restart: "no"
     environment:
+      TZ: Asia/Shanghai
       DATABASE_URL: "postgres://postgres:${POSTGRES_PASSWORD}@postgres:5432/finai"
     depends_on:
       - postgres
@@ -68,6 +74,7 @@ services:
     pull_policy: always
     restart: always
     environment:
+      TZ: Asia/Shanghai
       DATABASE_URL: "postgres://postgres:${POSTGRES_PASSWORD}@postgres:5432/finai"
       REDIS_URL: "redis://redis:6379"
       AKTOOLS_URL: "http://aktools:8080"
