feat(db): 添加股票动态数据表变更和生成迁移命令
添加股票动态数据表的变更字段(change和change_percent)并设置默认值
更新package.json添加db:generate命令用于生成迁移文件
更新README.md文档说明

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "db-push:dev": "dotenv -e .env.dev -- drizzle-kit push --verbose"
+    "db:push:dev": "dotenv -e .env.dev -- drizzle-kit push --verbose",
+    "db:generate": "drizzle-kit generate"
   },
   "dependencies": {
     "@ai-sdk/deepseek": "^1.0.31",
