feat(ai): 重构AI提供商模块并更新依赖
将zhipu和cloudflare AI提供商重构为使用@ai-sdk/openai-compatible
更新ai和@ai-sdk/openai-compatible依赖版本
调整AI任务队列并发设置
优化promise重试逻辑的错误处理

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "db:generate": "drizzle-kit generate"
   },
   "dependencies": {
-    "@ai-sdk/deepseek": "^1.0.31",
-    "ai": "^5.0.107",
+    "@ai-sdk/openai-compatible": "^2.0.2",
+    "ai": "^6.0.6",
     "cron": "^4.3.5",
     "drizzle-orm": "^0.44.7",
     "jose": "^6.1.2",
