--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -20,7 +20,7 @@ services:
       - 8080:8080
   pgdb:
     <<: *bs
-    image: postgres:18-alpine
+    image: pgvector/pgvector:pg18
     container_name: finai-pgdb
     ports:
       - 5432:5432
