--- a/package.json
+++ b/package.json
@@ -28,11 +28,16 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@nuxt/test-utils": "^3.22.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@types/pg": "^8.15.6",
+    "@vue/test-utils": "^2.4.6",
     "dotenv-cli": "^11.0.0",
     "drizzle-kit": "^0.31.7",
+    "happy-dom": "^20.0.11",
+    "playwright-core": "^1.57.0",
     "sass": "^1.94.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^3.2.4"
   }
 }
