refactor(task/news): 重构新闻关键词分析任务为生产者消费者模式
将新闻关键词分析任务从类实现重构为基于生产者消费者模式的函数式实现
新增消息队列工具类和常量定义
移除不再使用的嵌入功能代码
更新Cloudflare Workers AI配置和依赖

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ DATABASE_URL="postgres://postgres:<your-postgres-password>@finai-postgres:5432/f
 REDIS_URL="redis://finai-redis:6379"
 AKTOOLS_URL="http://finai-aktools:8080"
 ZAI_API_KEY="<your-zai-api-key>"
+CF_ACCOUNT_ID="<your-cloudflare-account-id>"
+CF_WORKERS_AI_API_KEY="<your-cloudflare-workers-ai-api-key>"
 DOCKER_REGISTRY="<your-docker-registry>"
 NETWORK_NAME="<your-network-name>"
 TAG="latest"
