fix: 优化AI请求队列并发设置并更新数据库镜像
refactor: 移除未使用的导入和简化返回语句
test: 删除过时的测试文件
ci: 更新postgres镜像为pgvector版本

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       TZ: Asia/Shanghai
   postgres:
     <<: *bs
-    image: postgres:18-alpine
+    image: pgvector/pgvector:pg18
     container_name: finai-postgres
     pull_policy: always
     restart: always
