feat: 添加Cloudflare Workers AI环境变量并优化任务处理
增加CF_ACCOUNT_ID和CF_WORKERS_AI_API_KEY环境变量配置
调整新闻嵌入任务生产数量从20增加到100
优化Cloudflare AI队列间隔从10秒减少到1秒
移除新闻嵌入任务中的冗余日志和未使用的导入

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,6 +79,8 @@ services:
       REDIS_URL: "redis://redis:6379"
       AKTOOLS_URL: "http://aktools:8080"
       ZAI_API_KEY: ${ZAI_API_KEY}
+      CF_ACCOUNT_ID: ${CF_ACCOUNT_ID}
+      CF_WORKERS_AI_API_KEY: ${CF_WORKERS_AI_API_KEY}
     depends_on:
       postgres:
         condition: service_started
