feat: 添加类型检查脚本并优化代码
增加 vue-tsc 依赖和 typecheck 脚本用于类型检查
优化 Redis 消息队列消费逻辑和类型断言

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev --dotenv .env.dev",
+    "typecheck": "npx nuxt typecheck",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -38,6 +39,7 @@
     "playwright-core": "^1.57.0",
     "sass": "^1.94.2",
     "typescript": "^5.9.3",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "vue-tsc": "^3.2.4"
   }
 }
