--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
   },
   "devDependencies": {
     "@nuxt/test-utils": "^3.22.0",
+    "@nuxtjs/mcp-toolkit": "^0.6.2",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@types/pg": "^8.15.6",
     "@vue/test-utils": "^2.4.6",
+    "baseline-browser-mapping": "^2.9.19",
     "dotenv-cli": "^11.0.0",
     "drizzle-kit": "^0.31.7",
     "happy-dom": "^20.0.11",
