--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai-compatible": "^2.0.2",
+    "@tailwindcss/vite": "^4.1.18",
     "ai": "^6.0.6",
     "cron": "^4.3.5",
     "drizzle-orm": "^0.44.7",
@@ -24,6 +25,7 @@
     "p-queue": "^9.0.1",
     "pg": "^8.16.3",
     "redis": "^5.10.0",
+    "tailwindcss": "^4.1.18",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3",
     "zod": "^4.1.13"
@@ -31,7 +33,6 @@
   "devDependencies": {
     "@nuxt/test-utils": "^3.22.0",
     "@nuxtjs/mcp-toolkit": "^0.6.2",
-    "@nuxtjs/tailwindcss": "^6.14.0",
     "@types/pg": "^8.15.6",
     "@vue/test-utils": "^2.4.6",
     "baseline-browser-mapping": "^2.9.19",
