--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@ai-sdk/openai-compatible": "^2.0.2",
     "@tailwindcss/vite": "^4.1.18",
+    "@vueuse/core": "^14.2.0",
     "ai": "^6.0.6",
     "cron": "^4.3.5",
     "drizzle-orm": "^0.44.7",
