--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,9 @@ services:
       ZAI_API_KEY: ${ZAI_API_KEY}
       CF_ACCOUNT_ID: ${CF_ACCOUNT_ID}
       CF_WORKERS_AI_API_KEY: ${CF_WORKERS_AI_API_KEY}
+      GATEWAY_URL: ${GATEWAY_URL}
+      GATEWAY_SECRET: ${GATEWAY_SECRET}
+      JWT_SECRET: ${JWT_SECRET}
     depends_on:
       postgres:
         condition: service_started
